--- a/project/templates/neverhaveiever/index.html
+++ b/project/templates/neverhaveiever/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>NeverHaveIEver</title>
-</head>
-<body>
-<b>Hello World</b>
-</body>
+    <head lang="en">
+        <meta charset="UTF-8">
+        <title>NeverHaveIEver</title>
+    </head>
+
+    <body>
+        <h1>NeverHaveIEver</h1>
+        {% if categories %}
+            <h2>Categories sorted by popularity (views)</h2>
+            <ul>
+                {% for category in categories %}
+                    <li><b><a href="/category/{{ category.slug }}">{{ category.name }}</a></b>
+                    {%  if category.adult_themed %}
+                        (Adult content)
+                    {% endif %}
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
+
+        {% if statements %}
+        {% else %}
+            <strong>There are no statements present</strong>
+        {% endif %}
+    </body>
+
 </html>
