--- a/project/templates/neverhaveiever/index.html
+++ b/project/templates/neverhaveiever/index.html
@@ -2,30 +2,16 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>NeverHaveIEver</title>
+        <title>NeverEver</title>
     </head>
 
     <body>
-        <h1>NeverHaveIEver</h1>
-        {% if categories %}
-            <h2>Categories sorted by popularity (views)</h2>
-            <ul>
-                {% for category in categories %}
-                    <li><b><a href="/category/{{ category.slug }}">{{ category.name }}</a></b>
-                    {%  if category.adult_themed %}
-                        (Adult content)
-                    {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <strong>There are no categories present.</strong>
-        {% endif %}
+        <h1>NeverEver</h1>
 
-        {% if statements %}
-        {% else %}
-            <strong>There are no statements present</strong>
-        {% endif %}
+        <a href="/play">New Game</a> <br>
+        <a href="/new-statement">Add New Statement</a> <br>
+        <a href="/stats">Statistics</a> <br>
+        <a href="/about">About</a> <br>
     </body>
 
 </html>
