--- a/project/templates/neverhaveiever/index.html
+++ b/project/templates/neverhaveiever/index.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head lang="en">
-        <meta charset="UTF-8">
-        <title>NeverEver</title>
-    </head>
+{% extends 'neverhaveiever/baseTemplate.html' %}
 
-    <body>
-        <h1>NeverEver</h1>
+{% load staticfiles %}
 
-        <a href="/play">New Game</a> <br>
-        <a href="/new-statement">Add New Statement</a> <br>
-        <a href="/stats">Statistics</a> <br>
-        <a href="/about">About</a> <br>
-    </body>
-
-</html>
+{% block body_block %}
+    <h1>NeverEver</h1>
+    <a href="/play">New Game</a> <br>
+    <a href="/new-statement">Add New Statement</a> <br>
+    <a href="/stats">Statistics</a> <br>
+    <a href="/about">About</a> <br>
+{% endblock %}
