--- a/project/templates/neverhaveiever/newStatement.html
+++ b/project/templates/neverhaveiever/newStatement.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>NeverEver - Add Statement</title>
-</head>
-<body>
-    <br><a href="/">Add Statement</a>
-    <br><a href="/">Return to Main Page</a>
+{% extends 'neverhaveiever/baseTemplate.html' %}
 
-</body>
-</html>
+{% load staticfiles %}
+
+{% block title %} - Add A Statement{% endblock %}
+
+{% block body_block %}
+    <br><a href="{% url 'index' %}">Add Statement</a>
+    <br><a href="{% url 'index' %}">Return to Main Page</a>
+{% endblock %}
