--- a/project/templates/neverhaveiever/play.html
+++ b/project/templates/neverhaveiever/play.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>NeverEver - Game Page</title>
-</head>
-<body>
-    <br><a href="/play">Next Question</a>
-    <br><a href="/play/summary">End Game</a>
-    <br><a href="/play/options">Options</a>
-</body>
-</html>
+{% extends 'neverhaveiever/baseTemplate.html' %}
+
+{% load staticfiles %}
+
+{% block body_block %}
+    <br><a href="{% url 'play' %}">Next Question</a>
+    <br><a href="{% url 'play_summary' %}">End Game</a>
+    <br><a href="{% url 'play_options' %}">Options</a>
+{% endblock %}
