--- a/project/templates/neverhaveiever/playOptions.html
+++ b/project/templates/neverhaveiever/playOptions.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>NeverEver - Game Options</title>
-</head>
-<body>
-    <br><a href="/play">Save Changes</a>
-    <br><a href="/play">Back</a>
+{% extends 'neverhaveiever/baseTemplate.html' %}
 
-</body>
-</html>
+{% load staticfiles %}
+
+{% block title %} - Game Options{% endblock %}
+
+{% block body_block %}
+    <br><a href="{% url 'play' %}">Save Changes</a>
+    <br><a href="{% url 'play' %}">Back</a>
+{% endblock %}
