--- a/project/templates/neverhaveiever/statsOptions.html
+++ b/project/templates/neverhaveiever/statsOptions.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>NeverEver - Statistics Options</title>
-</head>
-<body>
-    <a href="/stats">Back</a>
-</body>
-</html>
+{% extends 'neverhaveiever/baseTemplate.html' %}
+
+{% load staticfiles %}
+
+{% block title %} - Statistics Options{% endblock %}
+
+{% block body_block %}
+    <a href="{% url 'stats' %}">Back</a>
+{% endblock %}
