--- a/project/templates/neverhaveiever/testingCategories.html
+++ b/project/templates/neverhaveiever/testingCategories.html
@@ -1,25 +1,25 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>NeverHaveIEver - {{ category_name }}</title>
-    </head>
+{% extends 'neverhaveiever/baseTemplate.html' %}
 
-    <body>
-        <h1>{{ category_name }}</h1>
-        {% if category %}
-            {% if statements %}
+{% load staticfiles %}
+
+{% block title %} - {{ category_name }}{% endblock %}
+
+{% block body_block %}
+    <h1>{{ category_name }}</h1>
+    {% if category %}
+        {% if statements %}
             <ul>
                 {% for statement in statements %}
-                <li>{{ statement.title }}
-                ( YES: {{ statement.yes_answers }} answer(s), NO: {{ statement.no_answers }})
-                </li>
+                    <li>
+                        {{ statement.title }}
+                        ( YES: {{ statement.yes_answers }} answer(s), NO: {{ statement.no_answers }})
+                    </li>
                 {% endfor %}
             </ul>
-            {% else %}
-                <strong>No statements currently in this category.</strong>
-            {% endif %}
         {% else %}
-            The specified category {{ category_name }} does not exist!
+            <strong>No statements currently in this category.</strong>
         {% endif %}
-    </body>
-</html>
+    {% else %}
+        The specified category {{ category_name }} does not exist!
+    {% endif %}
+{% endblock %}
