--- a/project/templates/neverhaveiever/baseTemplate.html
+++ b/project/templates/neverhaveiever/baseTemplate.html
@@ -4,6 +4,8 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>NeverEver{% block title %}{% endblock %}</title>
+        <!-- linking to style sheet -->
+		<link href="neverever.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
