rudimentary answering functionality. changed Answer model to use one-to-many instead of many-to-many relationships with session, statement, player (each answer only has one of these right?). Change in lines 56 and 57 of views was because this was giving me an error, but I was probably doing something wrong. have to figure out how to make answering work for multiple players

--- a/project/templates/neverever/play.html
+++ b/project/templates/neverever/play.html
@@ -19,6 +19,19 @@
         {% endif %}
     {% endif %}
     <br />
+    <form id="answer_form" method="post" action="/play/">
+        {% csrf_token %}
+        {% for hidden in form.hidden_fields %}
+            {{ hidden }}
+        {% endfor %}
+
+        {% for field in form.visible_fields %}
+            {{ field.errors }}
+            {{ field.help_text }}
+            {{ field }}
+        {% endfor %}
+    <input type="submit">
+    </form>
     <br /><a href="{% url 'play' %}">Next Question</a>
     <br /><a href="{% url 'play_summary' %}">End Game</a>
     <br /><a href="{% url 'play_options' %}">Options</a>
