--- a/project/templates/neverever/testingCategories.html
+++ b/project/templates/neverever/testingCategories.html
@@ -12,7 +12,7 @@
                 {% for statement in statements %}
                     <li>
                         {{ statement.title }}
-                        ( YES: {{ statement.yes_answers }} answer(s), NO: {{ statement.no_answers }})
+                        ( YES: {{ statement.yes_answers }} answer(s), NO: {{ statement.no_answers }} answer(s), SFW: {{ statement.sfw }})
                     </li>
                 {% endfor %}
             </ul>
