play page now displays buttons for each player. however only post info for 1 player.

--- a/project/templates/neverever/play.html
+++ b/project/templates/neverever/play.html
@@ -23,20 +23,26 @@
             <br /><b>Statement:</b> I have never... {{ statement.title }}
         {% endif %}
     {% endif %}
-    <br />
-    <form id="answer_form" method="post" action="/play/">
-        {% csrf_token %}
-        {% for hidden in form.hidden_fields %}
-            {{ hidden }}
-        {% endfor %}
 
-        {% for field in form.visible_fields %}
-            {{ field.errors }}
-            {{ field.help_text }}
-            {{ field }}
+    {% if Players %}
+        {% for player in Players %}
+            <br />
+            <form id="answer_form" method="post" action="/play/">
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                {% endfor %}
+
+                {% for field in form.visible_fields %}
+                    {{ field.errors }}
+                    {{ field.help_text }}
+                    {{ field }}
+                {% endfor %}
+            <input type="submit">
+            </form>
         {% endfor %}
-    <input type="submit">
-    </form>
+    {% endif %}
+
     <br /><a href="{% url 'play' %}">Next Question</a>
     <br /><a href="{% url 'play_summary' %}">End Game</a>
     <br /><a href="{% url 'play_options' %}">Options</a>
