default is now 1 player, can add more players in options page. TODO set limit. I think it works.

--- a/project/templates/neverever/playOptions.html
+++ b/project/templates/neverever/playOptions.html
@@ -21,11 +21,14 @@
             {% if field.name == "categories" %}
                 <h3>Categories</h3>
             {% endif %}
+            {% if field.name == "num_players" %}
+                Number of players:
+            {% endif %}
             {{ field.errors }}
             {{ field.help_text }}
             {{ field }}
         {% endfor %}
-
+        </br>
         <input type="submit" name="submit" value="Save changes" />
     </form>
 
