added functionality for players to add their details when game ends. note: only works for a new session at the moment as the form updates players 1-n only.

--- a/project/templates/neverever/playSummary.html
+++ b/project/templates/neverever/playSummary.html
@@ -5,8 +5,29 @@
 {% block title %} - Game Summary{% endblock %}
 
 {% block body_block %}
+
     {% if session %}
         <b>Session status: </b> {{ session }} <br />
     {% endif %}
+
+    <form id = "player_form" method = "post" action = "">
+        {% for form in forms %}
+        <b>Player {{Player.id}}</b>
+        {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+            {% endfor %}
+
+            {% for field in form.visible_fields %}
+                {{ field.errors }}
+                {{ field.help_text }}
+                {{ field }}
+            {% endfor %}
+        <br />
+        {% endfor %}
+    <input type="submit">
+
+    </form>
+
     <br><a href="{% url 'index' %}">Return to main page</a>
 {% endblock %}
