Changes in Session model:it now has a field that stores the last used statement and a field that stores all used statements. The application now only shows new (i.e. not used) statements to players. If there are no more statements (based on the defined options) the application notifies the players to either end the session or change the game settings

--- a/project/templates/neverever/play.html
+++ b/project/templates/neverever/play.html
@@ -24,6 +24,9 @@
         {% endif %}
     {% endif %}
 
+        {% if no_more_statements %}
+            <b>No more statements to display. Please add more categories. If all categories were used please start a new game</b>
+        {% else %}
             <br />
             <form id="answer_form" method="post" action="/play/">
                 {% for form in forms %}
@@ -41,7 +44,8 @@
             <input type="submit">
             </form>
 
-    <br /><a href="{% url 'play' %}">Next Question</a>
+            <!--<br /><a href="{% url 'play' %}">Next Question</a>-->
+        {% endif %}
     <br /><a href="{% url 'play_summary' %}">End Game</a>
     <br /><a href="{% url 'play_options' %}">Options</a>
 {% endblock %}
