--- a/project/templates/neverever/index.html
+++ b/project/templates/neverever/index.html
@@ -3,27 +3,55 @@
 {% load staticfiles %}
 
 {% block body_block %}
-<div id="main">
-    <h1>NeverEver</h1>
-    <a id="btn" href="/play" class="btn">New Game</a><br><br><br>
-    <a id="btn" href="/new-statement" class="btn">Add New Statement</a>
+<div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="../" class="navbar-brand">Never Ever</a>
+          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main" aria-expanded="false" style="height: 1px;">
+          <ul class="nav navbar-nav">
+            <li><a href="/play">Play</a></li>
+            <li><a href="/tutorial">How to</a></li>
+            <li><a href="/stats">Statistics</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://builtwithbootstrap.com/" target="_blank">Built With Bootstrap</a></li>
+            <li><a href="/about" target="_blank">About</a></li>
+          </ul>
+        </div>
+      </div>
 </div>
-<div id="footer">
-    <p></p><a href="/stats">Statistics</a> <a href="/about">About</a></p>
+
+<div class="page-header text-center">
+    </br>
+    <h1>Never Ever</h1>
+    <p class="lead">Play never have I ever. Wherever you are.</p>
 </div>
-<div>
+
+<div class="text-center">
+<a href="/play" class="btn btn-primary btn-lg">Play</a></br></br>
+<a href="/new-statement" class="btn btn-info">Add New Statement</a></br></br>
+</div>
+
+<div class="page-footer">
+    <p>Currently, there
     {% if nSessions %}
+        {% if nSessions >= 1 %}is{% else %}are{% endif %}
         {{ nSessions }} active session{% if nSessions >= 1 %}s{% endif %}
-    {% elif nSessions == 0 %}
+    {% else %}
         No active sessions
     {% endif %}
-    <br />
+        , with
     {% if nPlayers %}
-        {{ nPlayers }} active player{% if nPlayers >= 1 %}s{% endif %}
-    {% elif nPlayers == 0 %}
-        No current players
+        {{ nPlayers }} player{% if nPlayers >= 1 %}s{% endif %}.
     {% else %}
-        UNKNOWN NUM OF PLAYERS &lt;TODO&gt;
+        no players. :(
     {% endif %}
+    </p>
 </div>
 {% endblock %}
