few more changes bootsrap

--- a/project/templates/neverever/about.html
+++ b/project/templates/neverever/about.html
@@ -12,5 +12,17 @@
     Elitr nobis mediocritatem eu mea, et eirmod equidem inciderint vim. Et sit cibo labore quaerendum,
     eu tollit consulatu nam, vel sale primis ei.
 
+<address>
+  <strong>Twitter, Inc.</strong><br>
+  795 Folsom Ave, Suite 600<br>
+  San Francisco, CA 94107<br>
+  <abbr title="Phone">P:</abbr> (123) 456-7890
+</address>
+
+<address>
+  <strong>Full Name</strong><br>
+  <a href="mailto:#">first.last@example.com</a>
+</address>
+
     <br><a href="{% url 'index' %}">Return to main page</a>
 {% endblock %}
