--- a/project/templates/neverever/baseTemplate.html
+++ b/project/templates/neverever/baseTemplate.html
@@ -13,6 +13,30 @@
     </head>
 
     <body>
+    <div class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="../" class="navbar-brand">Never Ever</a>
+          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main" aria-expanded="false" style="height: 1px;">
+          <ul class="nav navbar-nav">
+            <li><a href="/play">Play</a></li>
+            <li><a href="/play">New Statement</a></li>
+            <li><a href="/new-statement">Statistics</a></li>
+            <li><a href="/about">About Us</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>
+            <li><a href="http://www.tangowithdjango.com/" target="_blank">Tango With Django</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
         {% block body_block %}{% endblock %}
     </body>
 </html>
