deleted stats ops

--- a/project/templates/neverever/baseTemplate.html
+++ b/project/templates/neverever/baseTemplate.html
@@ -10,6 +10,9 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="{% static "css/bootstrap.css" %}" />
+
+        <!-- JS -->
+        <script src="{% static "js/bootstrap.js" %}"></script>
     </head>
 
     <body>
@@ -26,8 +29,8 @@
         <div class="navbar-collapse collapse" id="navbar-main" aria-expanded="false" style="height: 1px;">
           <ul class="nav navbar-nav">
             <li><a href="/play">Play</a></li>
-            <li><a href="/play">New Statement</a></li>
-            <li><a href="/new-statement">Statistics</a></li>
+            <li><a href="/new-statement">New Statement</a></li>
+            <li><a href="/stats">Statistics</a></li>
             <li><a href="/about">About Us</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
