--- a/project/templates/neverever/index.html
+++ b/project/templates/neverever/index.html
@@ -3,14 +3,18 @@
 {% load staticfiles %}
 
 {% block body_block %}
-<div class="page-header text-center">
-    <h1>Never Ever</h1>
-    <p class="lead">Play never have I ever. Wherever you are.</p>
-</div>
 
-<div class="text-center">
-<a href="/play" class="btn btn-primary btn-lg">Play</a></br></br>
-<a href="/new-statement" class="btn btn-default">New Statement</a></br></br>
+ <div class="container-fluid">
+  <div class="row-fluid span10 text-center">
+    <div class="page-header">
+        <h1>Never Ever</h1>
+        <p class="lead">Play never have I ever. Wherever you are.</p>
+    </div>
+    <div>
+        <a href="/play" class="btn btn-primary btn-lg btn-block">Play</a></br></br>
+        <a href="/new-statement" class="btn btn-default btn-lg btn-block">New Statement</a></br></br>
+    </div>
+  </div>
 </div>
 
 <div class="panel-footer">
