--- a/project/templates/neverever/baseTemplate.html
+++ b/project/templates/neverever/baseTemplate.html
@@ -40,6 +40,10 @@
         </div>
       </div>
     </div>
-        {% block body_block %}{% endblock %}
-    </body>
+	<div class="container-fluid">
+		<div class="row-fluid span10 text-center">
+			{% block body_block %}{% endblock %}
+		</div>
+	</div>
+</body>
 </html>
