--- a/project/templates/neverever/baseTemplate.html
+++ b/project/templates/neverever/baseTemplate.html
@@ -40,10 +40,8 @@
         </div>
       </div>
     </div>
-	<div class="container-fluid">
-		<div class="row-fluid span10 text-center">
+	<div class="container-fluid row-fluid span10 text-center" id="content">
 			{% block body_block %}{% endblock %}
-		</div>
 	</div>
 </body>
 </html>
