--- a/project/static/css/bootstrap.css
+++ b/project/static/css/bootstrap.css
@@ -23,10 +23,9 @@ html {
 
 #content, .container-fluid, .span9
 {
-    border: 1px solid #000;
     overflow-y:auto;
-    height:100%;
-}?
+    height:95%;
+}
 
 article,
 aside,
@@ -3356,6 +3355,10 @@ fieldset[disabled] .btn-link:focus {
 .btn-block {
   display: block;
   width: 100%;
+}
+.btn-block-main{
+  display: block;
+  width: 20%;
 }
 .btn-block + .btn-block {
   margin-top: 5px;
