--- a/project/templates/neverever/index.html
+++ b/project/templates/neverever/index.html
@@ -10,8 +10,8 @@
     <p class="lead">Play never have I ever. Wherever you are.</p>
 </div>
 <div>
-    <a href="/play" class="btn btn-primary btn-lg btn-block">Play</a></br></br>
-    <a href="/new-statement" class="btn btn-default btn-lg btn-block">New Statement</a></br></br>
+    <a href="/play" class="btn btn-primary btn-lg btn-block-main">Play</a></br></br>
+    <a href="/new-statement" class="btn btn-default btn-lg btn-block-main">New Statement</a></br></br>
 </div>
 
 <div class="panel-footer">
