--- a/project/templates/neverever/index.html
+++ b/project/templates/neverever/index.html
@@ -9,7 +9,7 @@
     <h1>Never Ever</h1>
     <p class="lead">Play never have I ever. Wherever you are.</p>
 </div>
-<div>
+<div class="text-center">
     <a href="/play" class="btn btn-primary btn-lg btn-block-main">Play</a></br></br>
     <a href="/new-statement" class="btn btn-default btn-lg btn-block-main">New Statement</a></br></br>
 </div>
