--- a/project/templates/neverever/baseTemplate.html
+++ b/project/templates/neverever/baseTemplate.html
@@ -40,7 +40,7 @@
         </div>
       </div>
     </div>
-	<div class="container-fluid row-fluid span10 text-center" id="content">
+	<div class="row-fluid span10 text-center" id="content">
 			{% block body_block %}{% endblock %}
 	</div>
 </body>
