--- a/project/templates/neverever/baseTemplate.html
+++ b/project/templates/neverever/baseTemplate.html
@@ -2,21 +2,34 @@
 
 {% load static %}
 
-<html>
-    <head lang="en">
-        <meta charset="UTF-8">
-        <title>NeverEver{% block title %}{% endblock %}</title>
-        <link rel="icon" href="{% static "icon/favicon.ico" %}">
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="{% static "css/bootstrap.css" %}" />
 
-        <!-- JS -->
-        <script src="{% static "js/bootstrap.js" %}"></script>
-    </head>
+    <title>NeverEver{% block title %}{% endblock %}</title>
 
-    <body>
-    <div class="navbar navbar-default">
+    <!-- Icon -->
+    <link rel="icon" href="{% static "icon/favicon.ico" %}">
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="{% static "css/bootstrap.css" %}" />
+	<link rel="stylesheet" href="{% static "css/neverever.css" %}" />
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
+
+    {% block head_block %}{% endblock %}
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+	<div class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <a href="../" class="navbar-brand">Never Ever</a>
@@ -43,5 +56,13 @@
 	<div class="row-fluid span10 text-center" id="content">
 			{% block body_block %}{% endblock %}
 	</div>
-</body>
+
+    <!-- Scripts at bottom for faster load times -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="{% static "js/bootstrap.min.js" %}"></script>
+	<!-- Toggle -->
+	<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
+  </body>
 </html>
