--- a/project/templates/neverever/playOptions.html
+++ b/project/templates/neverever/playOptions.html
@@ -7,6 +7,9 @@
 {% block body_block %}
     <h1>Game Options</h1>
 
+<!-- TODO make nsfw switch -->
+<input type="checkbox" data-toggle="toggle" checked data-on="SFW" data-off="NSFW" data-onstyle="default" data-offstyle="warning" data-size="mini">
+
     <form id="category_form" method="post" action="{% url 'play_options' %}">
         {% csrf_token %}
 
