--- a/project/templates/neverever/index.html
+++ b/project/templates/neverever/index.html
@@ -8,11 +8,12 @@
 
 {% block body_block %}
 
-<div class="page-header">
+<div class="page-header text-center">
     <h1>Never Ever</h1>
     <p class="lead">Play never have I ever. Wherever you are.</p>
 </div>
 
+<div class="vertical-center">
 <div class="container-fluid">
         <div class="row row-spacing">
                 <a href="/play" class="btn btn-primary btn-lg center-block btn-ne-main">Play</a>
@@ -21,9 +22,10 @@
             <a href="/new-statement" class="btn btn-default btn-lg center-block btn-ne-main">New Statement</a>
         </div>
 </div>
+</div>
 
 <footer class="footer footer-main">
-  <div class="container">
+  <div class="container text-center">
     <p class="text-muted">Currently, there
         {% if nSessions %}
             {% if nSessions > 1 %}are{% else %}is{% endif %}
