--- a/project/templates/neverever/newStatement.html
+++ b/project/templates/neverever/newStatement.html
@@ -5,28 +5,45 @@
 {% block title %} - Add A Statement{% endblock %}
 
 {% block body_block %}
-    <h1>Add a Statement</h1>
+    <div class="container">
+        <h1>Add a Statement</h1>
+    </div>
     <form id="statement_form" method="post" action="{% url 'new_statement' %}">
-
             {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
 
             {% for field in form.visible_fields %}
+                {% if field.name == "title" %}
+                    <div class="container">
+                          <div class="add-container text-left">
+                              {{ field.help_text }}...
+                              <input type="text" class="form-control new-statement" id="{{ field.auto_id }}" placeholder="added a new statement.">
+                          </div>
+                    </div>
+                {% endif %}
                 {% if field.name == "nsfw" %}
-                    Safe For Work:
+                     <div class="container row-spacing">
+                         <h3>Is your statement safe for work?</h3>
+                         <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox" data-toggle="toggle" data-on="NSFW" data-off="SFW" data-onstyle="warning" data-offstyle="default">
+                     </div>
                 {% endif %}
                 {% if field.name == "categories" %}
-                    <h3>Categories</h3>
+                <div class="container">
+                    <h3>Select Categories</h3>
+                        {{ field.errors }}
+                        {{ field.help_text }}
+                        {{ field }}
+                </div>
                 {% endif %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-                <br />
             {% endfor %}
 
-            <input type="submit" name="submit" value="Submit" />
+            <div class="container">
+                <div class="row row-spacing">
+                    <input type="submit" name="submit" value="Submit" class="btn btn-primary btn-lg btn-ne-add"/>
+                </div>
+                <div class="row row-spacing">
+                    <a href="{% url 'index' %}" class="btn btn-default btn-ne-add">Return to Main Page</a>
+                </div>
+            </div>
     </form>
-    <br><a href="{% url 'index' %}">Return to Main Page</a>
+
 {% endblock %}
